--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "A comprehensive portal for exploring the work of the old masters",
   "main": "app.js",
-  "engines":{"node":"6.2.1"},
+  "engines": {
+    "node": "6.2.1"
+  },
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -34,6 +36,7 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
+    "masonry-layout": "^4.1.1",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "request": "^2.74.0"
