--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg-promise": "^5.3.3"
   }
 }
